Add date and coord to expense dto and update types
