# backend/docs/swagger.yaml
@@ -24,9 +24,13 @@ definitions:
     properties:
       category:
         type: string
+      coord:
+        $ref: '#/definitions/expenses.GeoCoord'
       createdAt:
         type: integer
       currencyCode:
+        type: string
+      date:
         type: string
       details:
         items:
@@ -105,6 +109,13 @@ definitions:
     required:
     - expenses
     - paginationResult
+    type: object
+  expenses.GeoCoord:
+    properties:
+      lat:
+        type: number
+      lng:
+        type: number
     type: object
   helpers.ErrorResponse:
     properties:
